--- a/BarBot/Barbot.UWP/UserControls/Uc_AddIngredientButton.xaml
+++ b/BarBot/Barbot.UWP/UserControls/Uc_AddIngredientButton.xaml
@@ -9,8 +9,8 @@
     Width="auto"
     Height="100">
 
-    <Grid Background="#FF222222" Margin="5">
-        <Image Width="81" Source="ms-appx:///Assets/plus_icon.png" Margin="71,18,0,14" HorizontalAlignment="Left"/>
+    <Grid Background="#535353" Margin="5">
+        <Image Width="81" Source="ms-appx:///Assets/plus_icon.png" Margin="36,20,0,12" HorizontalAlignment="Left"/>
         <TextBox x:Name="ingredientName" BorderBrush="{x:Null}" Margin="266,-7,-20,5" Text="ADD INGREDIENT" HorizontalAlignment="Left" Background="{x:Null}" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="86" IsReadOnly="True" IsHitTestVisible="False"/>
     </Grid>
 </UserControl>
