--- a/BarBot/Barbot.UWP/UserControls/Uc_IngredientPicker.xaml
+++ b/BarBot/Barbot.UWP/UserControls/Uc_IngredientPicker.xaml
@@ -9,9 +9,10 @@
     Width="auto"
     Height="100">
 
-    <Grid Background="#FF222222" Margin="5">
+    <Grid Background="#FF004B99" Margin="5">
         <ComboBox x:Name="volumeSelector" SelectionChanged="Volume_Changed"  FontSize="65" Width="135" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalAlignment="Left" HorizontalContentAlignment="Right" VerticalContentAlignment="Top"/>
         <TextBox Width="126"  BorderBrush="{x:Null}" Text="Oz" HorizontalAlignment="Left" Background="{x:Null}" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="72" Margin="126,0,0,1" VerticalAlignment="Bottom" IsReadOnly="True" IsHitTestVisible="False"/>
-        <ComboBox x:Name="ingredientSelector" FontSize="65" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalContentAlignment="Right" VerticalContentAlignment="Top" Margin="266,0,0,0"/>
+        <ComboBox x:Name="ingredientSelector" SelectionChanged="Ingredient_Changed" FontSize="86" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalContentAlignment="Right" VerticalContentAlignment="Top" Margin="266,0,0,0" FontFamily="Microsoft Yi Baiti" Padding="12,3,0,10"/>
+        <Button x:Name="addIngredientButton" x:FieldModifier="public" Content="Add" Margin="0,10, 10,8" HorizontalAlignment="Right" Width="125" Height="72" Foreground="White" Background="#FF222222" FontFamily="Microsoft Yi Baiti" FontSize="48" VerticalContentAlignment="Top"></Button>
     </Grid>
 </UserControl>
