--- a/BarBot/Barbot.UWP/UserControls/Uc_IngredientPicker.xaml
+++ b/BarBot/Barbot.UWP/UserControls/Uc_IngredientPicker.xaml
@@ -12,7 +12,14 @@
     <Grid Background="#FF004B99" Margin="5">
         <ComboBox x:Name="volumeSelector" SelectionChanged="Volume_Changed"  FontSize="65" Width="135" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalAlignment="Left" HorizontalContentAlignment="Right" VerticalContentAlignment="Top"/>
         <TextBox Width="126"  BorderBrush="{x:Null}" Text="Oz" HorizontalAlignment="Left" Background="{x:Null}" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="72" Margin="126,0,0,1" VerticalAlignment="Bottom" IsReadOnly="True" IsHitTestVisible="False"/>
-        <ComboBox x:Name="ingredientSelector" SelectionChanged="Ingredient_Changed" FontSize="86" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalContentAlignment="Right" VerticalContentAlignment="Top" Margin="266,0,0,0" FontFamily="Microsoft Yi Baiti" Padding="12,3,0,10"/>
-        <Button x:Name="addIngredientButton" x:FieldModifier="public" Content="Add" Margin="0,10, 10,8" HorizontalAlignment="Right" Width="125" Height="72" Foreground="White" Background="#FF222222" FontFamily="Microsoft Yi Baiti" FontSize="48" VerticalContentAlignment="Top"></Button>
+        <ComboBox x:Name="ingredientSelector" SelectionChanged="Ingredient_Changed" FontSize="86" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalContentAlignment="Right" VerticalContentAlignment="Top" Margin="266,0,0,0" FontFamily="Microsoft Yi Baiti" Padding="12,0,0,10"/>
+        <Button x:Name="addIngredientButton" x:FieldModifier="public" Content="Add" Margin="0,10, 75,8" HorizontalAlignment="Right" Width="125" Height="72" Foreground="White" Background="#FF222222" FontFamily="Microsoft Yi Baiti" FontSize="48" VerticalContentAlignment="Top"></Button>
+        <Button x:Name="cancelAddIngredientButton" x:FieldModifier="public" Margin="0,10, 10,8" HorizontalAlignment="Right" Width="100" Height="72" Foreground="White" Background="#FF222222">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <TextBlock Text="X" Width="55" Height="72" FontFamily="Microsoft Yi Baiti" FontSize="64"  FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="45,0,0,0" FocusVisualPrimaryBrush="{x:Null}" Foreground="White"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </Grid>
 </UserControl>
