--- a/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
@@ -13,14 +13,21 @@
         <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
             <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1920"/>
         </Border>
-        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" TextWrapping="Wrap" Text="DRINK MENU" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="0,10,0,0"/>
+        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="79" Width="84" Click="Back_To_PartyMode" Margin="0,10,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Image Width="84" Height="70" Source="ms-appx:///Assets/back_arrow.png" Margin="0,0,17,0"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" Canvas.Left="50" TextWrapping="Wrap" Text="DRINK MENU" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,10,0,0"/>
         
         <Canvas Name="recipeTileCanvas" Height="970" Width="1640" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="140,100,140,10">
 
         </Canvas>
 
 
-        <Button x:Name="BackButton" Click="Previous_Page"  HorizontalAlignment="Left" Height="323" Margin="45,303,0,0" VerticalAlignment="Top" Width="186">
+        <Button x:Name="BackButton" Click="Previous_Page"  HorizontalAlignment="Left" Height="323" Margin="35,303,0,0" VerticalAlignment="Top" Width="186">
             <Button.Template>
                 <ControlTemplate TargetType="Button">
                     <Image x:Name="BackButtonImg" Stretch="None" Source="ms-appx:///Assets/BackButton.png"/>
