--- a/BarBot/BarBot.UWP/UserControls/Uc_OrderQueue.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_OrderQueue.xaml
@@ -13,7 +13,14 @@
          <Border BorderBrush="#004b99" BorderThickness="0,0,0,5" VerticalAlignment="Top">
             <Rectangle Fill="#222222" HorizontalAlignment="Left" Height="95" VerticalAlignment="Top" Width="1920"/>
         </Border>
-        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" TextWrapping="Wrap" Text="ORDER QUEUE" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="0,10,0,0"/>
+        <Button HorizontalAlignment="Left" VerticalAlignment="Top" Height="79" Width="84" Click="Back_To_PartyMode" Margin="0,10,0,0" Background="{x:Null}" ExitDisplayModeOnAccessKeyInvoked="False" UseSystemFocusVisuals="False" AllowFocusOnInteraction="False">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Image Width="84" Height="70" Source="ms-appx:///Assets/back_arrow.png" Margin="0,0,17,0"/>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" TextWrapping="Wrap" Text="ORDER QUEUE" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,10,0,0"/>
 
         <Grid Width="1880" Margin="0,110,0,0" VerticalAlignment="Top" Height="50" BorderThickness="0,0,0,2" BorderBrush="#FFAEAEAE">
             <Grid.ColumnDefinitions>
