--- a/BarBot/Barbot.UWP/UserControls/Uc_DrinkDetail.xaml
+++ b/BarBot/Barbot.UWP/UserControls/Uc_DrinkDetail.xaml
@@ -22,8 +22,13 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
 
-                <ResourceDictionary Source="Rd_DrinkDetailCheckBox.xaml"/>
+                <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_DrinkDetailCheckBox.xaml"/>
+                <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_Textbox.xaml"/>
+                <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_Combobox.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="ComboBoxItem">
+                <Setter Property="Foreground" Value="Blue"/>
+            </Style>
         </ResourceDictionary>
         
     </UserControl.Resources>
@@ -49,11 +54,11 @@
         <Image x:Name="HexBackground"  Stretch="Uniform" Source="ms-appx:///Assets/HexagonTile.png" Margin="70,125,1383,550" />
         <Image x:Name="RecipeImage" Stretch="Uniform" Source="{Binding Path=Recipe.Img}" Margin="70,105,1383,570"/>
 
-        <Button x:Name="pourDrinkButton" Click="Pour_Drink"  HorizontalAlignment="Center" Margin="1478,909,35,35" Height="136" Width="407" FocusVisualPrimaryBrush="#FF004B99" Content="POUR DRINK" Background="#FF004B99" FontFamily="Microsoft Yi Baiti" Foreground="White" FontSize="64"/>
+        <Button x:Name="pourDrinkButton" Click="Pour_Drink"  HorizontalAlignment="Center" Margin="1478,909,35,35" Height="136" Width="407" FocusVisualPrimaryBrush="#FF0067D2" Content="POUR DRINK" Background="#FF003872" FontFamily="Microsoft Yi Baiti" Foreground="White" FontSize="64" BorderThickness="0" FocusVisualSecondaryBrush="#FDFFFFFF"/>
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalAlignment="Left" Height="736" Margin="595,125,0,0" VerticalAlignment="Top" Width="1290">
             <StackPanel x:Name="ingredientList"/>
         </ScrollViewer>
-        <TextBox HorizontalAlignment="Left" Height="67" Margin="709,886,0,0" TextWrapping="Wrap" Text="WOULD YOU LIKE TO ADD" VerticalAlignment="Top" Width="730" BorderBrush="{x:Null}" IsHitTestVisible="False" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="64" Background="{x:Null}" VerticalContentAlignment="Top" IsReadOnly="True" AcceptsReturn="True" AllowFocusOnInteraction="False"/>
+        <TextBox HorizontalAlignment="Left" Height="67" Margin="709,886,0,0" TextWrapping="Wrap" Text="WOULD YOU LIKE TO ADD" VerticalAlignment="Top" Width="730" BorderBrush="{x:Null}" IsHitTestVisible="False" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="64" Background="{x:Null}" VerticalContentAlignment="Top" IsReadOnly="True" AllowFocusOnInteraction="False" IsTapEnabled="False" IsDoubleTapEnabled="False" IsHoldingEnabled="False" IsRightTapEnabled="False" IsColorFontEnabled="False"/>
         <CheckBox x:Name="checkBox" Style="{StaticResource ResourceKey=CustomCheckbox}" Content="ICE" HorizontalAlignment="Left" Height="69" Margin="863,1015,0,-4" VerticalAlignment="Top" Width="178" FontFamily="Microsoft Yi Baiti" FontSize="24" FocusVisualPrimaryBrush="White" RenderTransformOrigin="0.5,0.5" Padding="8,3,0,5" UseLayoutRounding="False" Foreground="White" BorderBrush="Red" FocusVisualSecondaryBrush="#99FFFFFF">
             <CheckBox.RenderTransform>
                 <CompositeTransform ScaleY="2.5" ScaleX="2.5"/>
