--- a/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
+++ b/BarBot/BarBot.UWP/UserControls/Uc_Menu.xaml
@@ -20,7 +20,7 @@
                 </ControlTemplate>
             </Button.Template>
         </Button>
-        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="67" Canvas.Left="50" TextWrapping="Wrap" Text="DRINK MENU" VerticalAlignment="Top" Width="495" FontFamily="Microsoft Yi Baiti" FontSize="72" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,10,0,0"/>
+        <TextBlock x:Name="menuTitle" Foreground="White" HorizontalAlignment="Left" Height="95" Canvas.Left="50" TextWrapping="Wrap" Text="DRINK MENU" VerticalAlignment="Top" Width="594" FontFamily="Microsoft Yi Baiti" FontSize="100" Canvas.ZIndex="50" SelectionHighlightColor="{x:Null}" Margin="70,-10,0,0"/>
         
         <Canvas Name="recipeTileCanvas" Height="970" Width="1640" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="140,100,140,10">
 
