--- a/BarBot/Barbot.UWP/UserControls/Uc_IngredientElement.xaml
+++ b/BarBot/Barbot.UWP/UserControls/Uc_IngredientElement.xaml
@@ -15,14 +15,16 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_Combobox.xaml"/>
                 <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_ComboBoxItem.xaml"/>
+                <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_ScrollViewer.xaml"/>
+                <ResourceDictionary Source="ms-appx:///ResourceDefinitions/Rd_ScrollBar.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
 
     <Grid Background="#FF222222" Margin="5" VerticalAlignment="Bottom">
-        <ComboBox x:Name="ingredientVolume" SelectionChanged="Volume_Changed"  FontSize="65" Width="135" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalAlignment="Left" HorizontalContentAlignment="Right" VerticalContentAlignment="Top"/>
-        <TextBox Width="126"  BorderBrush="{x:Null}" Text="Oz" HorizontalAlignment="Left" Background="{x:Null}" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="72" Margin="126,0,0,1" VerticalAlignment="Bottom" IsReadOnly="True" IsHitTestVisible="False"/>
-        <TextBox x:Name="ingredientName" BorderBrush="{x:Null}" Margin="266,-7,-20,5" Text="Name" HorizontalAlignment="Left" Background="{x:Null}" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="86" IsReadOnly="True" IsHitTestVisible="False" VerticalContentAlignment="Top"/>
+        <ComboBox x:Name="ingredientVolume" SelectionChanged="Volume_Changed"  FontSize="60" Width="155" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" FocusVisualPrimaryBrush="Black" Height="90" HorizontalAlignment="Left" HorizontalContentAlignment="Right" VerticalContentAlignment="Top"/>
+        <TextBox Width="126"  BorderBrush="{x:Null}" Text="Oz" HorizontalAlignment="Left" Background="{x:Null}" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="72" Margin="146,0,0,1" VerticalAlignment="Bottom" IsReadOnly="True" IsHitTestVisible="False"/>
+        <TextBox x:Name="ingredientName" BorderBrush="{x:Null}" Margin="286,-7,-20,5" Text="Name" HorizontalAlignment="Left" Background="{x:Null}" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="86" IsReadOnly="True" IsHitTestVisible="False" VerticalContentAlignment="Top"/>
         <!--<Button x:Name="removeIngredientButton" Content="X" x:FieldModifier="public" Margin="0,10, 10,8" HorizontalAlignment="Right" Width="100" Height="72" FontFamily="Microsoft Yi Baiti" FontSize="64" Foreground="White" Background="#FF222222"/>-->
         <Button x:Name="removeIngredientButton" x:FieldModifier="public" Margin="0,10, 10,8" HorizontalAlignment="Right" Width="100" Height="72" Foreground="White" Background="#FF222222">
             <Button.Template>
