Added drink pour command and dialog box on click in drink detail

--- a/BarBot/Barbot.UWP/UserControls/Uc_DrinkDetail.xaml
+++ b/BarBot/Barbot.UWP/UserControls/Uc_DrinkDetail.xaml
@@ -61,12 +61,12 @@
             <StackPanel x:Name="ingredientList"/>
         </ScrollViewer>
         <TextBox HorizontalAlignment="Left" Height="67" Margin="709,886,0,0" TextWrapping="Wrap" Text="WOULD YOU LIKE TO ADD" VerticalAlignment="Top" Width="730" BorderBrush="{x:Null}" IsHitTestVisible="False" Foreground="White" FontFamily="Microsoft Yi Baiti" FontSize="64" Background="{x:Null}" VerticalContentAlignment="Top" IsReadOnly="True" AllowFocusOnInteraction="False" IsTapEnabled="False" IsDoubleTapEnabled="False" IsHoldingEnabled="False" IsRightTapEnabled="False" IsColorFontEnabled="False"/>
-        <CheckBox x:Name="checkBox" Style="{StaticResource ResourceKey=CustomCheckbox}" Content="ICE" HorizontalAlignment="Left" Height="69" Margin="863,1015,0,-4" VerticalAlignment="Top" Width="178" FontFamily="Microsoft Yi Baiti" FontSize="24" FocusVisualPrimaryBrush="White" RenderTransformOrigin="0.5,0.5" Padding="8,3,0,5" UseLayoutRounding="False" Foreground="White" BorderBrush="Red" FocusVisualSecondaryBrush="#99FFFFFF">
+        <CheckBox x:Name="AddIce" Style="{StaticResource ResourceKey=CustomCheckbox}" Content="ICE" HorizontalAlignment="Left" Height="69" Margin="863,1015,0,-4" VerticalAlignment="Top" Width="178" FontFamily="Microsoft Yi Baiti" FontSize="24" FocusVisualPrimaryBrush="White" RenderTransformOrigin="0.5,0.5" Padding="8,3,0,5" UseLayoutRounding="False" Foreground="White" BorderBrush="Red" FocusVisualSecondaryBrush="#99FFFFFF">
             <CheckBox.RenderTransform>
                 <CompositeTransform ScaleY="2.5" ScaleX="2.5"/>
             </CheckBox.RenderTransform>
         </CheckBox>
-        <CheckBox x:Name="checkBox1" Style="{StaticResource ResourceKey=CustomCheckbox}" Content="LIME WEDGE" HorizontalAlignment="Left" Margin="1155,1014,0,-3" VerticalAlignment="Top" Height="69" Width="178" FontFamily="Microsoft Yi Baiti" FontSize="24" FocusVisualPrimaryBrush="White" RenderTransformOrigin="0.5,0.5" Padding="8,3,0,5" UseLayoutRounding="False" Foreground="White" BorderBrush="Red" FocusVisualSecondaryBrush="#99FFFFFF">
+        <CheckBox x:Name="AddGarnish" Style="{StaticResource ResourceKey=CustomCheckbox}"  Content="LIME WEDGE" HorizontalAlignment="Left" Margin="1155,1014,0,-3" VerticalAlignment="Top" Height="69" Width="178" FontFamily="Microsoft Yi Baiti" FontSize="24" FocusVisualPrimaryBrush="White" RenderTransformOrigin="0.5,0.5" Padding="8,3,0,5" UseLayoutRounding="False" Foreground="White" BorderBrush="Red" FocusVisualSecondaryBrush="#99FFFFFF">
             <CheckBox.RenderTransform>
                 <CompositeTransform ScaleY="2.5" ScaleX="2.5"/>
             </CheckBox.RenderTransform>
