--- a/BarBot/BarBot.UWP/TestClient/TestClient.xaml
+++ b/BarBot/BarBot.UWP/TestClient/TestClient.xaml
@@ -10,9 +10,11 @@
     d:DesignWidth="400">
 
     <Grid>
-        <StackPanel Name="ContainersPanel" HorizontalAlignment="Left" Height="252" Margin="0,38,0,0" VerticalAlignment="Top" Width="228"/>
-        <Button x:Name="button" Content="Run Ice Hopper" HorizontalAlignment="Left" Margin="233,38,0,0" VerticalAlignment="Top" Width="157" Click="button_Click" Foreground="White" Background="#33000000" BorderBrush="White"/>
-        <Button x:Name="button1" Content="Run Cup Dispenser" HorizontalAlignment="Left" Margin="233,75,0,0" VerticalAlignment="Top" Width="157" Height="29" Click="button1_Click" Background="#33000000" BorderBrush="White" Foreground="White"/>
-        <Button x:Name="ReadSensorButton" Content="Read Sensor" HorizontalAlignment="Left" Margin="233,105,0,0" VerticalAlignment="Top" Width="157" Height="29" Click="ReadSensorButton_Click" Background="#33000000" BorderBrush="White" Foreground="White"/>
+        <StackPanel Name="ContainersPanel" HorizontalAlignment="Left" Height="800" Margin="0,38,0,0" VerticalAlignment="Top" Width="400"/>
+        <StackPanel Name="DevicesPanel" HorizontalAlignment="Right" Height="800" Margin="0, 38, 0, 0" VerticalAlignment="Top" Width="400">
+            <Button x:Name="button" Content="Run Ice Hopper" HorizontalAlignment="Left" Margin="233,38,0,0" VerticalAlignment="Top" Width="157" Click="button_Click" FontSize="35" Foreground="White" Background="#33000000" BorderBrush="White"/>
+            <Button x:Name="button1" Content="Run Cup Dispenser" HorizontalAlignment="Left" Margin="233,75,0,0" VerticalAlignment="Top" Width="157" FontSize="35" Click="button1_Click" Background="#33000000" BorderBrush="White" Foreground="White"/>
+            <Button x:Name="ReadSensorButton" Content="Run Garnish Dispenser" HorizontalAlignment="Left" Margin="233,105,0,0" VerticalAlignment="Top" Width="157" FontSize="35" Click="ReadSensorButton_Click" Background="#33000000" BorderBrush="White" Foreground="White"/>
+        </StackPanel>
     </Grid>
 </UserControl>
