--- a/BarBot/Droid/Resources/layout/toolbar.axml
+++ b/BarBot/Droid/Resources/layout/toolbar.axml
@@ -5,4 +5,13 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/actionBarSize"
     android:background="?android:attr/colorPrimary"
-    android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar" />
+    android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/toolbar_title" 
+		style="@style/TitleTextView"/>
+	
+</Toolbar>
