--- a/BarBot/Droid/Resources/layout/DrinkMenu.axml
+++ b/BarBot/Droid/Resources/layout/DrinkMenu.axml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+	android:gravity="bottom"
+  	android:orientation="vertical"
+  	android:id="@+id/container">
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
-</RelativeLayout>
+</LinearLayout>
