--- a/BarBot/Droid/Resources/layout/DrinkMenu.axml
+++ b/BarBot/Droid/Resources/layout/DrinkMenu.axml
@@ -5,9 +5,9 @@
 	android:gravity="bottom"
   	android:orientation="vertical"
   	android:id="@+id/container">
-    <include
+    <!--<include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar" />-->
     <GridView xmlns:android="http://schemas.android.com/apk/res/android" 
 	    android:id="@+id/gridview"
 	    android:layout_width="fill_parent" 
