--- a/BarBot/Droid/Resources/layout/DrinkDetail.axml
+++ b/BarBot/Droid/Resources/layout/DrinkDetail.axml
@@ -4,4 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:id="@+id/container" />
+    android:id="@+id/container">
+<!--<include
+        layout="@layout/hexagon" />-->
+</LinearLayout>
